--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,16 @@
 <!--        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>-->
     </style>
 
+    <style name="splash_screen" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+        <item name="android:windowBackground">@drawable/splash_image</item>
+        <item name="colorPrimary">@color/mandarin</item>
+        <item name="colorPrimaryVariant">@color/vermilion</item>
+        <item name="colorPrimaryDark">@color/mandarin</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorAccent">@color/maximum_blue</item>
+    </style>
+
     <style name="welcome_message_first_line">
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">#CC042A2B</item>
